logs/dag_id=data_pipeline/run_id=manual__2024-05-10T101814.377791+0000/task_id=divide_data/attempt=60.log
[2024-05-10T12:15:22.527+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-05-10T12:15:22.550+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: data_pipeline.divide_data manual__2024-05-10T10:18:14.377791+00:00 [queued]>
[2024-05-10T12:15:22.557+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: data_pipeline.divide_data manual__2024-05-10T10:18:14.377791+00:00 [queued]>
[2024-05-10T12:15:22.557+0000] {taskinstance.py:2306} INFO - Starting attempt 60 of 63
[2024-05-10T12:15:22.568+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): divide_data> on 2024-05-10 10:18:14.377791+00:00
[2024-05-10T12:15:22.574+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=5841) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-05-10T12:15:22.574+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'data_pipeline', 'divide_data', 'manual__2024-05-10T10:18:14.377791+00:00', '--job-id', '453', '--raw', '--subdir', 'DAGS_FOLDER/main_dag.py', '--cfg-path', '/tmp/tmpail0_lo6']
[2024-05-10T12:15:22.575+0000] {standard_task_runner.py:63} INFO - Started process 5845 to run task
[2024-05-10T12:15:22.576+0000] {standard_task_runner.py:91} INFO - Job 453: Subtask divide_data
[2024-05-10T12:15:22.586+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/settings.py:195 DeprecationWarning: The sql_alchemy_conn option in [core] has been moved to the sql_alchemy_conn option in [database] - the old setting has been used, but please update your config.
[2024-05-10T12:15:22.611+0000] {task_command.py:426} INFO - Running <TaskInstance: data_pipeline.divide_data manual__2024-05-10T10:18:14.377791+00:00 [running]> on host dbfcb70dcca2
[2024-05-10T12:15:22.675+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='data_pipeline' AIRFLOW_CTX_TASK_ID='divide_data' AIRFLOW_CTX_EXECUTION_DATE='2024-05-10T10:18:14.377791+00:00' AIRFLOW_CTX_TRY_NUMBER='60' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-05-10T10:18:14.377791+00:00'
[2024-05-10T12:15:22.676+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-05-10T12:15:22.854+0000] {logging_mixin.py:188} INFO - 0        Public health and international epidemiology f...
1        Flexible Printed Active Antenna for Digital Te...
2        Parametric study of hydrogen production via so...
3        Superhydrophobic coating from fluoroalkylsilan...
4        Electrochemical impedance based DNA sensor usi...
                               ...                        
21132    Usability evaluation of the university library...
21133    Two decades' contribution of occupational medi...
21134    Patients' Perceived Treatment Effectiveness in...
21135    Counter intuitive channel allocation improveme...
21507    Corrigendum to "A comparison of eugenol and me...
Name: title, Length: 21137, dtype: object
[2024-05-10T12:15:22.855+0000] {logging_mixin.py:188} INFO - 0        [ Stanford University School of Medicine ,  Ch...
1                             [ Chulalongkorn University ]
2                             [ Chulalongkorn University ]
3        [ Hirosaki University ,  Chulalongkorn Univers...
4        [ Chulalongkorn University ,  Thailand Nationa...
                               ...                        
21132                                                     
21133                                                     
21134                                                     
21135                                                     
21507                                                     
Name: affiliation_name, Length: 21137, dtype: object
[2024-05-10T12:15:22.856+0000] {logging_mixin.py:188} INFO - 0        [ United States ,  Thailand ,  Thailand ,  Uni...
1                                             [ Thailand ]
2                                             [ Thailand ]
3        [ Japan ,  Thailand ,  Thailand ,  Japan ,  Th...
4        [ Thailand ,  Thailand ,  United States ,  Tha...
                               ...                        
21132                                                     
21133                                                     
21134                                                     
21135                                                     
21507                                                     
Name: affiliation_country, Length: 21137, dtype: object
[2024-05-10T12:15:22.857+0000] {logging_mixin.py:188} INFO - 0            
1            
2            
3            
4            
         ... 
21132        
21133        
21134        
21135        
21507    2016
Name: publication_year, Length: 21137, dtype: object
[2024-05-10T12:15:22.858+0000] {logging_mixin.py:188} INFO - 0                                                       []
1                                                       []
2        [ Circulating fluidized bed ,  Computational f...
3        [ Encapsulation ,  Fluoroalkylsilane ,  Natura...
4        [ acpcPNA ,  Electrochemical impedance spectro...
                               ...                        
21132                                                     
21133                                                     
21134                                                     
21135                                                     
21507                                                     
Name: keywords, Length: 21137, dtype: object
[2024-05-10T12:15:22.861+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-05-10T12:15:22.862+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/tasks/divide_data.py", line 35, in divide_data
    title_keywords_year(df, file_path_to_upload)
  File "/opt/airflow/dags/tasks/divide_data.py", line 48, in title_keywords_year
    df['keywords'] = df['keywords'].apply(literal_eval) #convert to list type
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/core/series.py", line 4764, in apply
    ).apply()
      ^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/core/apply.py", line 1209, in apply
    return self.apply_standard()
           ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/core/apply.py", line 1289, in apply_standard
    mapped = obj._map_values(
             ^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/core/base.py", line 921, in _map_values
    return algorithms.map_array(arr, mapper, na_action=na_action, convert=convert)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/core/algorithms.py", line 1814, in map_array
    return lib.map_infer(values, mapper, convert=convert)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "lib.pyx", line 2926, in pandas._libs.lib.map_infer
  File "/usr/local/lib/python3.12/ast.py", line 66, in literal_eval
    node_or_string = parse(node_or_string.lstrip(" \t"), mode='eval')
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.12/ast.py", line 52, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<unknown>", line 1
    [ Circulating fluidized bed ,  Computational fluid dynamics ,  Multiphase flow models ,  Riser ,  Sorption enhanced steam methane reforming ]
      ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
[2024-05-10T12:15:22.873+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=data_pipeline, task_id=divide_data, run_id=manual__2024-05-10T10:18:14.377791+00:00, execution_date=20240510T101814, start_date=20240510T121522, end_date=20240510T121522
[2024-05-10T12:15:22.882+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 453 for task divide_data (invalid syntax. Perhaps you forgot a comma? (<unknown>, line 1); 5845)
[2024-05-10T12:15:22.910+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-05-10T12:15:22.925+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-05-10T12:15:22.927+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
